GNOME Bugzilla – Bug 539708
[mpegstream] Increase allowable gap between streams
Last modified: 2011-01-24 18:56:42 UTC
Please describe the problem: When using Thoggen to encode a particular DVD, I get a very large timestamp from the video pad every time at the same place every time. I've traced this to the sending of newsegment events from the mpeg2dec element, which get passed to videorate, which them emits huge timestamps. Thoggen then stops encoding. Steps to reproduce: 1. Encode a DVD with Thoggen (my test case is Princess Mononoke) 2. Wait till 310 seconds of it are encoded 3. Watch the encoding stop Actual results: The encoding stops Expected results: The encoding goes on till the end of the title Does this happen every time? yes Other information: If I comment out the sending of newsegment from mpeg2dec, Thoggen goes on till the end of the title, but at the place where it would have stopped, I get a dozen or so seconds of crackling audio, which seems to be more or less what it should be if it was not crackling. After it recovers, the sound is still in sync. I'm afraid I have no patch for it. I do not know whether the problem lies in mpeg2dec, videorate, anything else, or even the dvd itself.
*** Bug 539709 has been marked as a duplicate of this bug. ***
Could you run thoggen with GST_DEBUG=5 GST_DEBUG_NO_COLOR=1 thoggen &> log and bzip and attach the resulting log file?
I have the log, but won't attach till you confirm you want it posted, as the bzip2'd log is 600 MB - 12 GB uncompressed. Took bloody three hours to compress at -9 :/ Alternatively, if you can give me a more precise set of debug flags, I can regenerate a smaller log.
Sebastian, I think your question from comment #2 has been answered in comment #3. I am thus reopening.
Created attachment 177688 [details] [review] mpegstream: increase allowable gap between streams The new delay is three times as much as the old one, and just happens to let me properly decode my "Princess Mononoke" DVD, on which dvdreadsrc was chocking before at 5:11. While there, merge the constants used in two places into a define.
Thanks, I'll push this after release.
commit 7e6125fc8f1d077a13b874a4bf615e5ccde9eb19 Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk> Date: Thu Jan 6 18:29:06 2011 +0000 mpegstream: increase allowable gap between streams The new delay is three times as much as the old one, and just happens to let me properly decode my "Princess Mononoke" DVD, on which dvdreadsrc was chocking before at 5:11. While there, merge the constants used in two places into a define. https://bugzilla.gnome.org/show_bug.cgi?id=539708