mpegstream: increase allowable gap between streams

The new delay is three times as much as the old one, and just happens
to let me properly decode my "Princess Mononoke" DVD, on which dvdreadsrc
was chocking before at 5:11.
While there, merge the constants used in two places into a define.

https://bugzilla.gnome.org/show_bug.cgi?id=539708